@@ -2,6 +2,7 @@
 
 	* Added Canon PowerShot A420.
 	* Added Canon Digital IXUS 900Ti.
+	* Added Philips PSA235 and Samsung YH-925GS from libmtp.
 
 2007-01-18  Marcus Meissner  <marcus@jet.franken.de>
 
